# gsecs.site

./: .gitignore  Cargo.toml  analyze_data.py  flake.nix  shell.nix
.claude/skills/g-sec-info-gatherer/: SKILL.md  rbi_scraper.py
data/: 2025-01_1.json  2025-01_2.json  2025-01_3.json  2025-01_4.json  2025-01_5.json  2025-02_1.json  2025-02_2.json  2025-02_3.json  2025-04_1.json  2025-04_2.json  2025-04_3.json  2025-04_4.json  2025-04_5.json  2025-04_6.json  2025-04_7.json  2025-04_8.json  2025-04_9.json  2025-05_1.json  2025-05_10.json  2025-05_2.json  2025-05_3.json  2025-05_4.json  2025-05_5.json  2025-05_6.json  2025-05_7.json  2025-05_8.json  2025-05_9.json  2025-06_1.json  2025-06_2.json  2025-06_3.json  2025-06_4.json  2025-07_1.json  2025-07_2.json  2025-07_3.json  2025-07_4.json  2025-07_5.json  2025-07_6.json  2025-07_7.json  2025-07_8.json  2025-08_1.json  (+11 more)
migrations/: 20231002060212_securities_schema_tables.sql
src/: db.rs  lib.rs  main.rs
src/api/: bond.rs  mod.rs
src/config/: production.toml
src/handlers/: bond.rs
src/models/: bond.rs
tests/: health_check.rs
