[package]
name = "gsecs_site"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0-rc.3" }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio"] }
sqlx-cli = { version = "0.7.2", features = ["native-tls", "postgres"] }
tokio = { version = "1.32.0", features = ["full"] }
